# mindcraft

./: .gitattributes  .gitignore  README.md  docker-compose.yml  keys.example.json  minecollab.md  package.json  settings.js
apply-patch/: Cargo.toml
apply-patch-js/src/: lib.js  main.js  parser.js  seek_sequence.js  standalone_executable.js
apply-patch-js/tests/: README.md  all-tests-runner.js  basic-functionality-tests.js  complex-scenarios-tests.js  edge-cases-boundary-tests.js  production-scenarios-tests.js  test_comprehensive.js  test_isolated.js
apply-patch/src/: lib.rs
bots/: lintTemplate.js
patches/: mineflayer+4.33.0.patch  mineflayer+4.35.0.patch  mineflayer-pathfinder+2.4.5.patch
profiles/: andy-4-reasoning.json  andy-4.json  azure.json  cerebras.json  claude.json  claude_thinker.json  deepseek.json  freeguy.json  gemini.json  glhf.json  gpt.json  grok.json  groq.json  huggingface.json  hyperbolic.json  llama.json  mercury.json  mistral.json  novita.json  ollama.json  openrouter.json  qwen.json  vllm.json
profiles/defaults/: _default.json  coding.md
src/agent/: action_manager.js  agent.js  coder.js  history.js  memory_bank.js  modes.js  patch_applier.js  self_prompter.js
src/mindcraft/: mindcraft.js  mindserver.js
src/models/: azure.js  cerebras.js  claude.js  deepseek.js  gemini.js  glhf.js  gpt.js  grok.js  groq.js  huggingface.js  hyperbolic.js  mercury.js  mistral.js  novita.js  ollama.js  openrouter.js  prompter.js  qwen.js  (+2 more)
tools/: edit.js  execute.js  glob.js  grep.js  lint.js  ls.js  multiEdit.js  read.js  toolManager.js  write.js
(+24 files in other folders)
